# job104-mcp

./: .gitignore  .mcpbignore  LICENSE  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-21-job104-mcp-server.md
docs/superpowers/specs/: 2026-06-21-job104-mcp-server-design.md
scripts/: fetch_codes.py
src/job104_mcp/: __init__.py  __main__.py  client.py  codes.py  models.py  params.py  server.py
src/job104_mcp/data/: area.json  jobcat.json
tests/: test_client.py  test_codes.py  test_e2e.py  test_models.py  test_params.py  test_server.py  test_smoke.py
tests/fixtures/: detail_sample.json  search_sample.json
